--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+/* Global Styles */
+:root {
+    --font-size: 16px;
+    --font-family: 'Poppins';
+}
+
+body, p {
+    font-family: var(--font-family);
+    font-size: 16px;
+}
+  
 body {
     background: hsl(180, 2%, 92%);
 }
@@ -14,4 +25,12 @@ p {
     border-radius: 10px;
     margin: 10px 20px;
     padding: 10px 30px;
+}
+
+.notifications-count p {
+    background: none;
+}
+
+.notifications-count .count {
+    
 }
