--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ body {
 
 img {
     border-radius: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 .app {
@@ -30,6 +32,10 @@ p {
     border-radius: 10px;
     margin: 10px 20px;
     padding: 10px 30px;
+}
+
+p:nth-child(4) {
+    background: none;
 }
 
 .notifications-count p {
