--- a/src/App.css
+++ b/src/App.css
@@ -28,13 +28,17 @@ img {
 }
 
 p {
-    background: hsl(211, 68%, 94%);
+    background: hsl(210, 60%, 98%);
     border-radius: 10px;
     margin: 10px 20px;
     padding: 10px 30px;
 }
 
-p:nth-child(4) {
+p:nth-child(5) {
+    background: hsl(211, 68%, 94%);
+}
+
+p:nth-child(4), p:nth-child(6), p:nth-child(7), p:nth-child(8) {
     background: none;
 }
 
@@ -48,3 +52,24 @@ p:nth-child(4) {
     padding: 2px 10px;
     border-radius: 5px;
 }
+
+.dot {
+    width: 10px;
+    height: 10px;
+    color: hsl(1, 90%, 64%);
+    background: hsl(1, 90%, 64%);
+    display: inline-block;
+    margin-left: 10px;
+    border-radius: 50px;
+}
+
+.comment {
+    margin-left: 7rem;
+    margin-top: -1rem;
+    margin-bottom: 2rem;
+}
+
+.chess {
+    margin-left: 40rem;
+}
+
