--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,9 @@ p:nth-child(4), p:nth-child(6), p:nth-child(7), p:nth-child(8) {
     }
 }
 
+@media(min-width: 990px) {
+    .chess {
+        margin-left: 20rem;
+    }
+}
+
