--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,20 @@ img {
     cursor: pointer;
 }
 
-p {
+p, bg-primary {
     background: hsl(210, 60%, 98%);
     border-radius: 10px;
     margin: 10px 20px;
     padding: 10px 30px;
+}
+
+.bg-primary {
+    display: flex;
+}
+
+.bg-none {
+    background: none;
+    display: flex;
 }
 
 p:nth-child(5) {
@@ -66,6 +75,10 @@ p:nth-child(4), p:nth-child(6), p:nth-child(7), p:nth-child(8) {
     display: inline-block;
     margin-left: 10px;
     border-radius: 50px;
+}
+
+.no-dot {
+    display: none;
 }
 
 .comment {
